// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item should display input value with two buttons 1`] = `
<li
  className="undefined tc-enumeration-item"
  id="0-item"
>
  <input
    autoFocus={true}
    className="undefined tc-enumeration-item-label"
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
  />
  <div
    className="undefined tc-enumeration-item-actions"
  >
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    />
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    />
  </div>
</li>
`;

exports[`Item should display input value with two buttons. The vamidate button is disabled 1`] = `
<li
  className="undefined tc-enumeration-item"
  id="0-item"
>
  <input
    autoFocus={true}
    className="undefined tc-enumeration-item-label"
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
  />
  <div
    className="undefined tc-enumeration-item-actions"
  >
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    />
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    />
  </div>
</li>
`;
